# hm-kernel-llm-opt

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: app.yaml  model_server.yaml  workloads.yaml
configs/prompts/: analysis_prompt.md  code_review.yaml  coder.yaml  conductor.yaml  query_code.yaml  query_graph.yaml  query_runtime.yaml  query_runtime_code.yaml  simple_analysis.json  trace_analyst.yaml
docs/: HMOPT_Detailed_Design_and_Implementation.md  architecture.md  data_model.md  pipeline.md  security.md
examples/: config_minimal.yaml
outputs/: framegraph.json  hiperf.json  hitrace.json
scripts/: bootstrap_db.sh  run_api.sh  run_pipeline.sh
src/hmopt/: __init__.py  cli.py
src/hmopt/agents/: __init__.py  coder.py  conductor.py  profiler.py  reviewer.py  safety.py  trace_analyst.py  verifier.py
src/hmopt/agents/prompts/: coder.md  conductor.md  trace_analyst.md
src/hmopt/analysis/: __init__.py
src/hmopt/analysis/correlation/: __init__.py  aligner.py  ranker.py
src/hmopt/analysis/runtime/: __init__.py  hotspot.py  metrics.py
src/hmopt/analysis/runtime/traces/: __init__.py  flamegraph_parser.py  framegraph_parser.py  hiperf_parser.py  hitrace_parser.py  sysfs_parser.py
src/hmopt/analysis/static/: __init__.py  callgraph.py  indexer.py  psg.py
src/hmopt/api/: main.py
src/hmopt/api/routers/: __init__.py
src/hmopt/core/: __init__.py  config.py  errors.py  llm.py  run_context.py
src/hmopt/datasets/: __init__.py  exporter.py  formatter.py
src/hmopt/evaluation/: __init__.py  benchmark.py  compare.py  reports.py
src/hmopt/indexing/: __init__.py  clangd_client.py  clangd_indexer.py  kernel_index.py  llamaindex_pipeline.py  openai_like.py  paths.py  query.py  runtime_index.py  runtime_ingestion.py  types.py
src/hmopt/llm/: __init__.py  models.py  openai_like.py
src/hmopt/orchestration/: __init__.py  graph.py  nodes.py  state.py
src/hmopt/prompting/: __init__.py  registry.py
src/hmopt/storage/: __init__.py  artifact_store.py  embedding_meta.py  llamaindex.py  neo4j.py
src/hmopt/storage/db/: __init__.py  engine.py  models.py  schema.sql
src/hmopt/storage/db/migrations/: README.md
src/hmopt/storage/vector/: __init__.py  embeddings.py  store.py
src/hmopt/tools/: __init__.py  build_tools.py  db_tools.py  git_tools.py  perf_tools.py  repo_tools.py  test_tools.py
tests/: README.md
