[project]
name = "hm-verif-opt-platform"
version = "0.0.1"
description = "Skeleton: LLM-driven code + performance optimization platform for hm-verif-kernel"
requires-python = ">=3.10"
readme = "README.md"

# NOTE: Dependencies are placeholders; pin versions during implementation.
dependencies = [
  "pydantic>=2",
  "pyyaml>=6",
  "rich>=13",
  "typer>=0.12",
  "sqlalchemy>=2",
  "alembic>=1.13",
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "openai>=1.0",
  "langchain>=0.2",
  "langgraph>=0.2",
]

[project.scripts]
hmopt = "hmopt.cli:app"

[tool.ruff]
line-length = 100

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
