[project]
name = "hm-verif-opt-platform"
version = "0.0.1"
description = "Skeleton: LLM-driven code + performance optimization platform for hm-verif-kernel"
requires-python = ">=3.10"
readme = "README.md"

# NOTE: Dependencies are placeholders; pin versions during implementation.
dependencies = [
  "pydantic>=2",
  "pyyaml>=6",
  "rich>=13",
  "typer>=0.12",
  "sqlalchemy>=2",
  "alembic>=1.13",
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "openai>=1.0",
  "langchain>=0.2",
  "langgraph>=0.2",
  "llama-index-core>=0.14.5,<0.15",
  "llama-index-llms-openai>=0.6.13,<0.7",
  "llama-index-embeddings-openai>=0.5.1,<0.6",
  "llama-index-graph-stores-neo4j>=0.5.1,<0.6",
  "llama-index-vector-stores-neo4jvector>=0.5.2,<0.6",
  "neo4j>=5",
]

[project.scripts]
hmopt = "hmopt.cli:app"

[tool.ruff]
line-length = 100

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
